# hypara

./: .gitignore  CMakeLists.txt  README.md  hypara.hpp  main.cpp
.github/workflows/: cmake-multi-platform.yml
sample/: main.cpp
test/: main.cpp
